# a3data

./: .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  run.py  tests-test_api.py
.github/: copilot-instructions.md
.github/instructions/: git-conventions.instructions.md  python-coding-style.instructions.md
docs/: ARCHITECTURE.md  TASKS.md
docs/requirements/: project-breakdown.md  requirements.md
scripts/: api_check.sh  cleanup_pycache.py  config.sh  dev.sh  setup.sh
src/config/: config.py
src/incident_extractor/: main.py
src/incident_extractor/agents/: __init__.py  extractor.py  helpers.py  preprocessor.py  supervisor.py
src/incident_extractor/api/: __init__.py  app.py  dependencies.py
src/incident_extractor/api/middleware/: __init__.py  cors.py  error_handling.py  logging.py  security.py  timing.py
src/incident_extractor/api/responses/: __init__.py  exceptions.py  handlers.py  models.py
src/incident_extractor/api/routers/: __init__.py  debug.py  extraction.py  health.py  metrics.py
src/incident_extractor/application/: __init__.py
src/incident_extractor/application/dtos/: __init__.py  incident_dtos.py
src/incident_extractor/application/interfaces/: __init__.py  incident_service_interface.py
src/incident_extractor/application/use_cases/: __init__.py  extract_incident_use_case.py
src/incident_extractor/config/: __init__.py  config.py  llm.py  logging.py
src/incident_extractor/core/: __init__.py  container.py  dependencies.py
src/incident_extractor/core/config/: __init__.py  config.py  llm_settings.py  logging.py
src/incident_extractor/core/exceptions/: __init__.py  application.py  base.py  domain.py  infrastructure.py
src/incident_extractor/domain/: enums.py
src/incident_extractor/domain/entities/: __init__.py  incident.py
src/incident_extractor/domain/events/: __init__.py  base.py  incident_events.py
src/incident_extractor/domain/exceptions/: __init__.py
src/incident_extractor/domain/repositories/: __init__.py  incident_repository.py  llm_repository.py
src/incident_extractor/domain/services/: __init__.py  incident_enrichment_service.py  incident_extraction_service.py  incident_validation_service.py
src/incident_extractor/domain/specifications/: __init__.py  base.py  incident_specifications.py
src/incident_extractor/domain/value_objects/: __init__.py  common.py  incident.py  location.py
src/incident_extractor/graph/: workflow.py
src/incident_extractor/infrastructure/: __init__.py
src/incident_extractor/infrastructure/health/: __init__.py  health_checker.py
src/incident_extractor/infrastructure/llm/: __init__.py  factory.py
src/incident_extractor/infrastructure/llm/clients/: __init__.py  base_client.py  mock_client.py  ollama_client.py  openai_client.py
src/incident_extractor/infrastructure/llm/repository/: __init__.py  llm_repository_impl.py
src/incident_extractor/infrastructure/llm/resilience/: __init__.py  circuit_breaker.py  retry.py
src/incident_extractor/infrastructure/logging/: __init__.py  structured_logger.py
src/incident_extractor/infrastructure/monitoring/: __init__.py  metrics_collector.py
src/incident_extractor/infrastructure/preprocessing/: __init__.py  text_processor.py
src/incident_extractor/models/: __init__.py  graph_models.py  schemas.py
src/incident_extractor/presentation/: __init__.py  app.py
src/incident_extractor/presentation/api/: __init__.py
src/incident_extractor/presentation/api/v1/: __init__.py
src/incident_extractor/presentation/api/v1/endpoints/: __init__.py  admin.py  auth.py  health.py  incidents.py
src/incident_extractor/presentation/middleware/: __init__.py  auth.py  error_handler.py  logging.py  metrics.py  rate_limiting.py  request_id.py
src/incident_extractor/presentation/schemas/: __init__.py  common.py  requests.py  responses.py
src/incident_extractor/prompts/: extractor.yaml  supervisor.yaml
src/incident_extractor/services/: __init__.py  health_service.py  llm_service.py  metrics_service.py
src/models/: schemas.py
src/services/: extractor.py  llm_client.py
src/utils/: preprocessing.py
tests/: conftest.py
tests/fixtures/: test_data.py
tests/integration/: test_date_parsing.py  test_error_handling.py  test_extraction_api.py
tests/unit/application/: test_dtos.py  test_use_cases.py
tests/unit/infrastructure/health/: test_health_checker.py
tests/unit/infrastructure/llm/: __init__.py  test_factory.py  test_mock_client.py
tests/unit/infrastructure/monitoring/: test_metrics_collector.py
tests/unit/infrastructure/preprocessing/: test_text_processor.py
tests/unit/presentation/: test_middleware.py
